syntax = "proto3";

option csharp_namespace = "GreetingServer";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  int32 price =  1;
  int32 languageCode = 2;
  string firstName = 3;
  string lastName = 4;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
